# SearchEngine

./: !!!_README_!!!.txt  .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  Settings.cpp  Settings.h  ds  main.cpp  test_main.cpp
asio_client_RAD_Studio/: !!!_README_!!!.txt  Unit2.cpp  Unit2.dfm  Unit2.h
config/: Answers.json  Requests.json  Settings.json
src/: AsioServer.cpp  AsioServer.h  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  Logger.cpp  Logger.h  SearchServer.cpp  SearchServer.h  Settings.cpp  Settings.h  ThreadPool.cpp  ThreadPool.h  TreadPool.cpp  TreadPool.h
test_files/: 100worst.txt  15-songs.txt  1956.txt  1958.txt  1959.txt  1960.txt  2600raid.txt  3sonnets.txt  acidinf.txt  acidinfo.txt  amino.txt  amph.txt  amylnitr.txt  anar38.txt  anar67.txt  angel.txt  aoa-crac.txt  apples.txt  art257.txt  art275.txt  artaud.txt  ast-dece.txt  ast-dorn.txt  ast-list.txt  ast-prog.txt  ast500hr.txt  astronau.txt  athletic.txt  b_caapi.txt  backmask.txt  bad_1.txt  balls.txt  bard_01.txt  bard_02.txt  bard_03.txt  bard_04.txt  bard_x1.txt  bard_x2.txt  bardic-x.txt  bardic3.txt  (+315 more)
tst/: CMakeLists.txt  test_main.cpp
